--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Github organization linked to sonarcloud
-sonar.organization=paulodutra
+sonar.organization=test-sonarqube-zabbix
 
 # Project key from sonarcloud dashboard for Github Action, otherwise pick a project key you like
 sonar.projectKey=paulodutra_test-sonarqube-zabbix-4.4
