--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.projectKey=paulodutra_test-sonarqube-zabbix-4.4
 sonar.projectName=test_sonarqube_zabbix4.4
 sonar.projectVersion=1.0.0
 sonar.sources=.
+sonar.java.binaries=./src/zabbix_java/
