--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=test-sonarqube-zabbix
 
 # Project key from sonarcloud dashboard for Github Action, otherwise pick a project key you like
 sonar.projectKey=paulodutra_test-sonarqube-zabbix-4.4
-
+sonar.sourceEncoding=UTF-8
 sonar.projectName=test_sonarqube_zabbix4.4
 sonar.projectVersion=1.0.0
 sonar.sources=.
