--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,4 +8,4 @@ sonar.projectName=test_sonarqube_zabbix4.4
 sonar.projectVersion=1.0.0
 sonar.sources=.
 sonar.java.binaries=./src/zabbix_java/
-sonar.scanner.opts=-Xmx512m 
+sonar.runner.opts=-Xmx512m 
