--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,5 +8,5 @@ sonar.projectName=test_sonarqube_zabbix4.4
 sonar.projectVersion=1.0.0
 sonar.sources=.
 sonar.java.binaries=./src/zabbix_java/
-sonar.ce.javaOpts=-Xmx2048m
-
+sonar.ce.javaOpts=@ceJavaOpts@
+sonar.ce.javaAdditionalOpts=-Xmx512m
