teste da diretiva excludes

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,4 @@ sonar.sources=.
 sonar.java.binaries=./src/zabbix_java/
 sonar.ce.javaOpts=-Xmx1280m
 sonar.web.javaOpts=-Xmx1280m
+sonar.exclusions=**/*.doc,**/*.docx,**/*.ipch
