configuração do analyzer de sql

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,8 @@ sonar.projectName=test_sonarqube_zabbix4.4
 sonar.projectVersion=1.0.0
 sonar.sources=.
 sonar.java.binaries=./src/zabbix_java/
-sonar.ce.javaOpts=-Xmx1280m
+ssonar.ce.javaOpts=-Xmx1280m
 sonar.web.javaOpts=-Xmx1280m
 sonar.exclusions=**/*.doc,**/*.docx,**/*.ipch
+sonar.tsql.file.suffixes=sql,tsql
+sonar.plsql.file.suffixes=pks,pkb
