teste da diretiva sonar.cfamily.build-wrapper-output.bypass

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,4 +13,4 @@ sonar.web.javaOpts=-Xmx1280m
 sonar.exclusions=**/*.doc,**/*.docx,**/*.ipch
 sonar.tsql.file.suffixes=sql,tsql
 sonar.plsql.file.suffixes=pks,pkb
-sonar.cfamily.build-wrapper-output=./build
+sonar.cfamily.build-wrapper-output.bypass=true
