--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,3 +14,6 @@ sonar.exclusions=**/*.doc,**/*.docx,**/*.ipch
 sonar.tsql.file.suffixes=sql,tsql
 sonar.plsql.file.suffixes=pks,pkb
 sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
+sonar.cfamily.build-wrapper-output=./src/zabbix_server
